--- a/dissemination.tex
+++ b/dissemination.tex
@@ -1,5 +1,19 @@
 \section{Dissemination and Outreach}
 \label{sec:outreach}
+
+
+It is our strong desire to make our educational and research
+program portable and adaptable by other institutions. For example, 
+the lack of such a program that can be easily emulated was identified 
+as one of the main impediments for wide adoption of astrostatistics
+in graduate astronomy curricula around the country (by the Working 
+Group on Astroinformatics and Astrostatistics of the American Astronomical
+Society, chaired by the Co-PI Ivezi\'{c}).  We intend to make all our
+materials public, including lectures for
+both courses, data sets used in lectures and research seminars, and
+all the data analysis code. 
+
+
 \subsection{Workshop} 
 \label{sec:workshop}
 
