--- a/organization.tex
+++ b/organization.tex
@@ -96,8 +96,8 @@ computer algorithms to automatically classify astronomical objects
 methods to accelerate the exploration of complex parameter spaces
 \cite{daniel2012}.
 
-The Co-PI Ivezi\'{c} is project scientist for the LSST. He was
-recently PI on four projects supported by NSF that are indirectly
+The Co-PI Ivezi\'{c} is the Project Scientist for the LSST. He was
+recently PI on three projects supported by NSF that are indirectly
 related to the work proposed here (mostly through data mining aspects,
 public release practice for all data products, and through engaging
 large numbers of students in research and publication process).
@@ -129,7 +129,6 @@ Ph.D. thesis, and has engaged four undergraduates in data analysis and
 publications.
 
 
-
 Beyond the statistical and astrophysical aspects of the research
 described above the PIs have demonstrated a commitment for integrating
 research and education (see, for example, the extensive machine
@@ -143,9 +142,6 @@ software \cite{rosenfield2011}.
 
 All tools, codes and educational material developed through this
 program will be open-source and made available on the web. 
-
-
-
 
 \comment{
 \section{Cemetery}
