--- a/dissemination.tex
+++ b/dissemination.tex
@@ -9,17 +9,31 @@ as one of the main impediments for wide adoption of astrostatistics
 in graduate astronomy curricula around the country (by the Working 
 Group on Astroinformatics and Astrostatistics of the American Astronomical
 Society, chaired by the Co-PI Ivezi\'{c}).  We intend to make all our
-materials public, including lectures for
-both courses, data sets used in lectures and research seminars, and
-all the data analysis code. 
+materials public, including lectures for both courses, data sets used
+in lectures and research seminars, and all the data analysis code. 
 
 
-\subsection{Workshop} 
+\subsection{Workshops} 
 \label{sec:workshop}
 
-At the last meeting, we assumed a 3-day workshop for about 30 faculty
-from other institutions of higher learning who would want to emulate
-our program. Further assuming \$20/ day/person for lunch and coffee,
-and \$75/person for conference dinner, \$1,500 for the wor kshop
-venue, and four grants of \$500 to young faculty and postdocs, we need
-about \$7,500 fo r the workshop.
+In order to facilitate easy adoption of our program by others, we 
+plan to hold two workshops. The first workshop, which will also 
+serve as a dry run for the second larger workshop, will be limited to
+faculty from the University of Washington, and it will be held during
+the second program year. We anticipate about 10 faculty from various 
+science and engineering departments attending this workshop. Given 
+the local attendees, we plan to organize two half-day sessions focused 
+on i) program outline and materials, and ii) measured program progress 
+and ideas for improvements. 
+
+The second workshop will be longer and open to everyone. We plan a 
+three-day workshop and anticipate about 30 faculty from other
+institutions of higher learning in attendance. The workshop program
+will include i) the program presentation and discussion of available 
+materials (day 1), and ii) hands-on work with available data sets and
+tools (such as {\it astroML} exercises; day 2), and iii) a discussion
+of measured program progress and ideas for improvements (half day, day
+3). We have budgeted modest travel support for 4 young faculty and
+postdocs, and lunch/coffee/conference dinner for 30 attendees. 
+All the workshop materials and presentations will be made publicly
+available via a website. 
