--- a/education.tex
+++ b/education.tex
@@ -353,17 +353,6 @@ this proposal.
 \subsection{Python Packages} 
 \label{sec:Python}
 
-\begin{figure*}[!t]
-\vskip -1.8in
-\includegraphics[width=1.02\hsize,clip]{astroML.pdf}
-\vskip -2.0in
-\caption{We will leverage all the modern Python tools available in {\it astroML} (publicly
-available from astroML.org) and
-other packages, including a large number of practical data-intensive exercises developed to
-support textbook that will be used with the proposed \astrocl~ course.} 
-\label{Fig:astroML}
-\end{figure*}
-
 
 We will leverage all the publicly available modern Python tools. In particular, seminar work will be 
 built around the {\it astroML} package (available from http://www.astroml.org) that was developed 
@@ -395,9 +384,22 @@ the same methods and tools later to scientifically unrelated but mathematically 
 
 
 \begin{figure*}[!t]
-\vskip -1.8in
-\includegraphics[width=1.02\hsize,clip]{astroML2.pdf}
-\vskip -2.0in
+\vskip -1.9in
+\phantom{x} \hskip 0.7in
+\includegraphics[width=0.8\hsize,clip]{astroML.pdf}
+\vskip -1.6in
+\caption{We will leverage all the modern Python tools available in {\it astroML} (publicly
+available from astroML.org) and
+other packages, including a large number of practical data-intensive exercises developed to
+support textbook that will be used with the proposed \astrocl~ course.} 
+\label{Fig:astroML}
+\end{figure*}
+
+\begin{figure*}[!t]
+\vskip -1.9in
+\phantom{x} \hskip 0.7in 
+\includegraphics[width=0.8\hsize,clip]{astroML2.pdf}
+\vskip -1.6in
 \caption{An example of sophisticated tools available in {\it astroML} and exercises that will be
 used in practical seminar work. The figure shows a comparison of the decomposition of SDSS 
 spectra using PCA (left panel), ICA (middle panel) and NMF (right panel). The rank of the component
