--- a/proposal.tex
+++ b/proposal.tex
@@ -123,6 +123,8 @@
 
 \input{organization} % not touched yet
 
+%% PROPOSAL TEXT MUST NOT EXCEED 15 PAGES - not including references! 
+\newpage 
 \bibliographystyle{plain}
 \bibliography{proposal}
 \end{document} 
