--- a/research.tex
+++ b/research.tex
@@ -28,6 +28,22 @@ are listed below.
   high dimensional data as well. Our teams will explore finding
   appropriate distance functions in recorded brain activity data,
   social network data, and astronomical data.  
+\item {\em Classification of high-dimensional data sets.} 
+Both supervised and unsupervised classification methods have a long
+history in astronomy. We will use large astronomical data sets (e.g. 
+stellar and quasar samples from the SDSS, with millions of objects in
+each class), with emphasis on most recent surveys, to expose students
+to a suite of modern classification methods. We will emphasise critical
+comparison of different methods and how to choose an optimal method
+for the specific domain problems at hand.
+\item {\em Time series analysis.} 
+We will focus here on methods for finding periodicity in time series 
+data. Starting from standard methods, that essentially fit a single 
+harmonic model to data with gaussian noise, we will explore how
+to incorporate non-sinusoidal periodicity (perhaps using template 
+light curves) and non-gaussian noise. We will also explore methods 
+for analysis of stochastic data, such as wavelet analysis and Gaussian
+processes with arbitrary covariance matrix.
 \eits
 %
 Results of this work may be part of publishable research; others will
