--- a/dataplan.tex
+++ b/dataplan.tex
@@ -96,12 +96,12 @@
 
 \centerline{\large \bf Data Management Plan}
 
-There will be two types of data that we will manage and make publicly avaialable.
+There will be two types of data that we will manage and make publicly available.
 
 First, we will make extensive use of catalogs delivered by modern astronomical
 surveys (e.g. SDSS, but also many others). We will publish all SQL queries used to 
 download data from the various databases together with other public project documentation.
-All the processing of raw downloaded data will be performed with a suite of python
+All the processing of raw downloaded data will be performed with a suite of Python
 tools. Many of these tools (mostly data mining and machine learning applications,
 but also various visualization algorithms) were already placed in the public domain 
 (available from http://astroml.github.com/); those that will be developed for
