entered bayta's evaluation

--- a/activities.tex
+++ b/activities.tex
@@ -78,4 +78,41 @@ example, this plan harmonizes with the IGERT plan of offering graduate students 
 \item Finally, the graduate students will participate in the Undergraduate Research Seminar, and will mentor 1-2 undergraduates. 
  \eits
 
+\subsection{Evaluation plan}
+
+The evaluation of the outcomes of this proposal will be performed by
+the UW Office of Educational Assessment (OEA), with respect to the
+program goals listed in Section \ref{sec:key-aims}.
+
+The evaluation plan includes the use of both qualitative and
+quantitative methods for the purposes of improving offerings across
+years of the grant (formative evaluation) and assessing the extent to
+which the grant-funded activities are effective in meeting projected
+outcomes (summative evaluation).  To assess student learning, OEA will
+consult with instructors of the proposed courses to ensure that
+in-course assessments (e.g., homework assignments, exams, capstone
+projects) align with the course learning goals.  
+
+
+\underline{Year 1} OEA will work with the project investigators to
+develop a full logic model for the program. At this point, it is
+anticipated that the summative evaluation will focus on the immediate
+and long-term outcomes (Section \ref{sec:key-aims}.  In addition, OEA
+will gather basic information about participation in activities
+(enrollment in new courses, and new major), and demographics where
+relevant to building a diverse workforce.
+
+Other evaluation activities: design of in-course assessments, pre- and
+post-surveys, and end-of-course focus groups with students enrolled in
+new courses, interviews with students involved in research, creation
+of tracking database for all student participants.
+
+\underline{Years 2 and 3} activities: pre- and post-surveys for
+students in \statcl, \astrocl, interviews with students involved in
+research, follow-up surveys, survey for faculty taking part in
+workshop.  
+
+Deliverables, each year: reports on all student data, reports on
+faculty workshops, two evaluation meetings with PIs for formative
+review of evaluation results.
 
