--- a/organization.tex
+++ b/organization.tex
@@ -3,6 +3,7 @@
 \label{plan}
 
 \subsection{                      Key Project Aims                   }
+\label{sec:key-aims}
  
 This proposal aims to 
 \bits
@@ -11,6 +12,13 @@ by developing two new courses and a research seminar.
 \item Expose students to computationally intensive data analysis and mentor them in research projects. 
 \item Facilitate adopting of this program by other institutions.
 \eits  
+{\bf Long-term outcomes} For all participating students: 
+continued involvement with \cdse~ research, 
+declaration of newly developed computationally minded statistics major,
+intentions to pursue or progression along academic and/or career path within \cdse~ (e.g., graduate school application, internships, employment placement). 
+For UW curriculum: establishment of computationally minded statistics major,
+increased enrollment in newly developed major, inclusion of developed activities in other classes or curriculla.
+
 
 \subsection{Responsibilities and Schedule}
 
