marina's citations in, i get natbib error. see proposal.bib for my citations.

--- a/proposal.bib
+++ b/proposal.bib
@@ -69,3 +69,53 @@ url = {http://www.test.org/doe/}
   series = 	 {Springer Texts in Statistics},
 }
 
+@Article{Perrault-JoncasM:riemann-jmlr11,
+  author = 	 {Dominique Perrault-Joncas and Marina Meil\u{a}},
+  title = 	 {Riemannian learning of manifolds},
+  journal = 	 {Journal of Machine Learning Research,
+  year = 	 {(submitted)},
+  volume = 	 {},
+  pages = 	 {},
+}
+
+@InProceedings{PerraultM:asymptotic-nips11,
+ title ={Directed Graph Embedding: an Algorithm based on Continuous Limits of Laplacian-type Operators},
+ author={Dominique C. Perrault-Joncas and Marina Meila},
+ booktitle = {Advances in Neural Information Processing Systems 24},
+ editor = {J. Shawe-Taylor and R.S. Zemel and P. Bartlett and F.C.N. Pereira and K.Q. Weinberger},
+ pages = {990--998},
+ year = {2011}
+}
+
+@article {cheng:95,
+ author = {Yizong Cheng},
+ title = {Mean Shift, Mode Seeking, and Clustering},
+ journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+ volume = {17},
+ number = {8},
+ year = {1995},
+ issn = {0162-8828},
+ pages = {790--799},
+ doi = {http://dx.doi.org/10.1109/34.400568},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+}
+@Article{nugent:10,
+  author = 	 {Stuetzle W. and Nugent R.},
+  title = 	 {A generalized single linkage method for estimating the cluster tree of a density},
+  journal = 	 {Journal of Computational and Graphical Statistics},
+  year = 	 {2010},
+  volume = 	 {19},
+  number = 	 {2},
+  pages = 	 {397--418},
+}
+
+@InProceedings{rinaldo:13,
+  author = 	 {Balakrishnan, S. and Narayanan, S. and Rinaldo, A. and Singh, A. and Wasserman, L.},
+  title = 	 {Cluster Trees on Manifolds},
+  booktitle = {Neural Information Processing Systems (NIPS)},
+  pages = 	 {},
+  year = 	 {2013},
+  editor = 	 {},
+}
+
