--- a/research.tex
+++ b/research.tex
@@ -13,21 +13,22 @@ undergraduate students. The students will be mentored by the four
 PI's. They will be working on real research projects, some of which
 are listed below. 
 \bits
-\item {\em Non-linear dimension reduction in large scientific data} is a long-time research interest of \meila, with methodological results in \cite{x}. Currently, these methods have been used largely for data visualisation in Astronomy as well as in other scientific fields; however, we believe they could be useful beyond visualisation, in discovering low dimensional meaningful parametrizations of high-dimensional data. The students will work on implementing scalable Python versions of the algorithms, suitable for large data sets, and, co-advised by the PI's will apply them to the study of scientific data.
+\item {\em Non-linear dimension reduction in large scientific data} is a long-time research interest of \meila, with methodological results in \cite{PerraultM:asymptotic-nips11,Perrault-JoncasM:riemann-jmlr11}. Currently, these methods have been used largely for data visualisation in Astronomy as well as in other scientific fields; however, we believe they could be useful beyond visualisation, in discovering low dimensional meaningful parametrizations of high-dimensional data. The students will work on implementing scalable Python versions of the algorithms, suitable for large data sets, and, co-advised by the PI's will apply them to the study of scientific data.
 \item {\em Non-parametric clustering and density estimation.} We will
   focus here on methods that cluster by finding high-density regions
-  in very large data. This method is particularly suited to finding
-  non-spherical (or non-ellipsoidal) clusters in low-dimensional
-  data. It is robust to the presence of outliers or of background
-  distributions of points, and it is also robust to the presence of
-  clusters of very different sizes, being able to accomodate together
-  in one model both very large and very small clusters. The algorithms
-  are easy to understand and implement, making them ideal for a first
-  project in big scientific data analysis. Moreover, with an
-  appropriate distance function, these methods can be applied to very
-  high dimensional data as well. Our teams will explore finding
-  appropriate distance functions in recorded brain activity data,
-  social network data, and astronomical data.  
+  in very large data \cite{cheng:95,nugent:10,rinaldo:13}. This method
+  is particularly suited to finding non-spherical (or non-ellipsoidal)
+  clusters in low-dimensional data. It is robust to the presence of
+  outliers or of background distributions of points, and it is also
+  robust to the presence of clusters of very different sizes, being
+  able to accomodate together in one model both very large and very
+  small clusters. The algorithms are easy to understand and implement,
+  making them ideal for a first project in big scientific data
+  analysis. Moreover, with an appropriate distance function, these
+  methods can be applied to very high dimensional data as well. Our
+  teams will explore finding appropriate distance functions in
+  recorded brain activity data, social network data, and astronomical
+  data.
 \item {\em Classification of high-dimensional data sets.} 
 Both supervised and unsupervised classification methods have a long
 history in astronomy. We will use large astronomical data sets (e.g. 
