--- a/Summary.tex
+++ b/Summary.tex
@@ -132,14 +132,14 @@ broader range of domain sciences), and leveraging partnerships with
 the eScience Institute, the UW IGERT graduate program in Big Data, and
 the dual track PhD program in Computer Science and Statistics. 
 
-The Big Data track will comprise two elective courses an Undergraduate
-\cdse~ Research Seminar. The speakers in this seminar series will be
-undergraduates themselves or their mentors, and the seminar topics
-will be their research projects. With continuous evaluation of the
-impact of these courses we expect to redesign the track to incorporate
-two groups: math/stat electives (group I) and computing and science
-electives (group II) with focuses on the theory or methodology and
-application respectively.
+The Big Data track will comprise two elective courses, and an
+Undergraduate \cdse~ Research Seminar. The speakers in this seminar
+series will be undergraduates themselves or their mentors, and the
+seminar topics will be their research projects. With continuous
+evaluation of the impact of these courses we expect to redesign the
+track to incorporate two groups: math/stat electives (group I) and
+computing and science electives (group II) with focuses on the theory
+or methodology and application respectively.
 
 %This educational program fits naturally with a number of initiatives
 %to integrate the mathematical and physical sciences around the
@@ -163,11 +163,12 @@ teams including graduate and undergraduate students (with the
 recruitment process targeted at minorities and underrepresented
 groups).  The student teams will be mentored by the four PI's and will
 work on real research projects including: non-linear dimension
-reduction in large scientific data, and non-parametric clustering and
-density estimation. To enable students to focus on the statistical
-application as opposed to the software development, initial research
-projects will be based on existing scalable Python applications,
-developed by the coPIs, that are suitable for large data sets.
+reduction in large scientific data, non-parametric clustering and
+density estimation, classification, and time series analysis. To
+enable students to focus on the statistical application as opposed to
+the software development, initial research projects will be based on
+existing scalable Python applications, developed by the coPIs, that
+are suitable for large data sets.
 
 \noindent{\bf Faculty Professional
 Development/Outreach:}
