--- a/proposal.tex
+++ b/proposal.tex
@@ -45,7 +45,7 @@
 \usepackage{hyperref}
 
 
-\title{Statistical Explorations of Data in the {ACMS} {Program} at the {University} of {Washington}}
+\title{EXTREEMS-QED: Statistical Explorations of Data in the {ACMS} {Program} at the {University} of {Washington}}
 \author{PI: Marina \meila, Co-PIs: Andrew Connolly, \v{Z}eljko Ivezi\'{c}, Jacob Vanderplas}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
